--- a/package.json
+++ b/package.json
@@ -20,12 +20,29 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@ionic-native/camera": "^5.3.0",
+    "@ionic-native/camera-preview": "^5.3.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/http": "^5.3.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "cordova-browser": "6.0.0",
+    "cordova-ios": "5.0.0",
+    "cordova-plugin-advanced-http": "2.0.7",
+    "cordova-plugin-camera": "4.0.3",
+    "cordova-plugin-camera-preview": "0.10.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "6.0.1",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^3.1.2",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
+    "three": "^0.103.0",
+    "three-vrcontrols-module": "^2.2.1",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
@@ -54,5 +71,21 @@
     "tslint": "~5.12.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-camera-preview": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-advanced-http": {}
+    },
+    "platforms": [
+      "ios"
+    ]
+  }
 }
